# researchflow

./: .gitignore  README.md  pyproject.toml  readme_ko.md
examples/: readme.md  sample_script.py
researchflow/alarm/: cli.py  constants.py  handler.py
researchflow/core/: config.py  constants.py  gpu.py  slack_sender.py  slack_setup.py  utils.py
researchflow/review/: agent.py  cli.py  handler.py  prompts.py  review_data.json
tests/: test_alarm_integration.py  test_config.py  test_gpu.py  test_slack_sender.py  test_slack_setup.py
tests/fixtures/: sample_experiment.py
tests/scripts/: alarm_parallel_example.sh
