[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "researchflow"
version = "1.0.0"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "python-dotenv",
]

[project.scripts]
alarm = "researchflow.alarm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["researchflow*"]
exclude = ["tests*"]
